# mallow

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/kernel/: mod.rs
src/report/: mod.rs
src/system/: cpu_info.rs  mod.rs
