[package]
name = "mallow"
version = "0.1.0"
edition = "2021"

[lib]
name = "mallow"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
core_affinity = "0.8"
raw-cpuid = "11.0.1"
rand = "0.9.0"
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 3
